# open-multi-agent-rs

./: .env.copy  .gitignore  Cargo.toml  LICENSE  README.md  rate_limiter.rs
docs/: README.md  api-reference.md  architecture.md  examples.md  getting-started.md
docs/guides/: approval-gates.md  built-in-tools.md  feedback-loop.md  hooks-and-trace.md  knowledge-base-pipeline.md  messaging.md  multi-turn.md  rag.md  retry.md  single-agent.md  streaming.md  structured-output.md  task-pipeline.md  tools.md
examples/: 01_single_agent.rs  02_multi_turn_chat.rs  03_streaming.rs  04_custom_tool.rs  05_structured_output.rs  06_task_pipeline.rs  07_multi_agent_system.rs  08_hooks_and_trace.rs  09_message_bus.rs  10_retry_and_approval.rs  11_python_coding_agent.rs  12_repo_mindmap.rs  13_http_tools.rs  14_data_tools.rs  15_system_tools.rs  16_web_search.rs  17_rag_knowledge_base.rs  18_bus_agents.rs  19_knowledge_base_pipeline.rs  20_utility_tools.rs  21_karpathy_full_pipeline.rs  22_feedback_loop.rs
src/: error.rs  feedback.rs  lib.rs  main.rs  messaging.rs  token_bucket.rs  trace.rs  types.rs
src/agent/: mod.rs  pool.rs  runner.rs
src/llm/: anthropic.rs  mod.rs  openai.rs  openrouter.rs
src/memory/: mod.rs
src/orchestrator/: mod.rs
src/task/: mod.rs  queue.rs  queue_tests.rs  scheduler.rs  scheduler_tests.rs
src/tool/: built_in.rs  mod.rs
tests/: feedback_loop_tests.rs  integration_tests.rs  mock_adapter.rs  new_features_integration.rs  stress_tests.rs
