[package]
name = "open-multi-agent-rs"
version = "0.1.4"
edition = "2021"
description = "A multi-agent orchestration framework for Rust — streaming LLM calls, tool use, task pipelines, retry, and observability."
license = "Apache-2.0"
repository = "https://github.com/Supernova1744/open-multi-agent-rs"
keywords = ["llm", "agent", "ai", "openai", "anthropic"]
categories = ["asynchronous", "api-bindings", "artificial-intelligence"]

[[bin]]
name = "demo"
path = "src/main.rs"

[lib]
name = "open_multi_agent_rs"
path = "src/lib.rs"

[[example]]
name = "01_single_agent"
path = "examples/01_single_agent.rs"

[[example]]
name = "02_multi_turn_chat"
path = "examples/02_multi_turn_chat.rs"

[[example]]
name = "03_streaming"
path = "examples/03_streaming.rs"

[[example]]
name = "04_custom_tool"
path = "examples/04_custom_tool.rs"

[[example]]
name = "05_structured_output"
path = "examples/05_structured_output.rs"

[[example]]
name = "06_task_pipeline"
path = "examples/06_task_pipeline.rs"

[[example]]
name = "07_multi_agent_system"
path = "examples/07_multi_agent_system.rs"

[[example]]
name = "08_hooks_and_trace"
path = "examples/08_hooks_and_trace.rs"

[[example]]
name = "09_message_bus"
path = "examples/09_message_bus.rs"

[[example]]
name = "10_retry_and_approval"
path = "examples/10_retry_and_approval.rs"

[[example]]
name = "11_python_coding_agent"
path = "examples/11_python_coding_agent.rs"

[[example]]
name = "12_repo_mindmap"
path = "examples/12_repo_mindmap.rs"

[[example]]
name = "13_http_tools"
path = "examples/13_http_tools.rs"

[[example]]
name = "14_data_tools"
path = "examples/14_data_tools.rs"

[[example]]
name = "15_system_tools"
path = "examples/15_system_tools.rs"

[[example]]
name = "16_web_search"
path = "examples/16_web_search.rs"

[[example]]
name = "17_rag_knowledge_base"
path = "examples/17_rag_knowledge_base.rs"

[[example]]
name = "18_bus_agents"
path = "examples/18_bus_agents.rs"

[[example]]
name = "19_knowledge_base_pipeline"
path = "examples/19_knowledge_base_pipeline.rs"

[[example]]
name = "20_utility_tools"
path = "examples/20_utility_tools.rs"

[dependencies]
dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
futures = "0.3"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
async-stream = "0.3"
csv = "1"
evalexpr = "11"
regex = "1"
once_cell = "1"
rand = "0.8"
zip = "2"

[dev-dependencies]
tempfile = "3"
